<resources>
    <string name="app_name">Mental Health</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="if_you_don_t_have_an_account">if you don\'t have an account</string>
    <string name="if_you_have_an_account">if you have an account</string>
    <string name="username">Username</string>
    <string name="profile">Profile</string>
</resources>